<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameTaskDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_name_dialog"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tilNameTask">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescriptionDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_description_task_dialog"/>

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTaskDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_btn_add_task"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tilDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancelTask"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelTask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_btn_cancel_task"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tilDescription"
            app:layout_constraintStart_toEndOf="@id/btnAddTaskDialog"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
