<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/common_padding_min"
    android:layout_marginBottom="@dimen/common_padding_min"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="@integer/material_motion_duration_long_1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llcName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/titleTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titleTask"
                android:inputType="text"
                android:autofillHints="name"
                android:padding="@dimen/common_padding_min"
                android:singleLine="false"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle2" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/llcName">

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_description"
                android:padding="@dimen/common_padding_min"
                android:inputType="text"
                android:autofillHints="name"
                android:singleLine="false"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llDescription">

            <CheckBox
                android:id="@+id/cbFinish"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvTaskFinished"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTaskFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/text_task_finished"
                app:layout_constraintStart_toEndOf="@id/cbFinish"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/imgReload"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/contentDescriptionDelete"
                android:padding="8dp"
                android:src="@drawable/ic_reload"
                app:layout_constraintEnd_toStartOf="@id/imgDelete"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/imgDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/contentDescriptionDelete"
                android:padding="8dp"
                android:src="@drawable/ic_delete_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>